--- a/Pipfile
+++ b/Pipfile
@@ -2,13 +2,11 @@
 name = "pypi"
 url = "https://pypi.douban.com/simple"
 verify_ssl = true
-skip_lock = true
 
 [dev-packages]
-pylint = "<2.0.0"
 
 [packages]
-django-simpleui = "*"
+django = "*"
 
 [requires]
 python_version = "3.7"
