完成富文本和markdown区分并且支持上传图片

--- a/Pipfile
+++ b/Pipfile
@@ -1,13 +1,14 @@
 [[source]]
 name = "pypi"
 url = "https://pypi.douban.com/simple"
-verify_ssl = true
 
 [dev-packages]
 
 [packages]
 django = "*"
 mistune = "*"
+django-ckeditor = "*"
+pillow = "*"
 
 [requires]
 python_version = "3.7"
