重构 用rest framework 实现前后端分离

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,12 @@ django = "*"
 mistune = "*"
 django-ckeditor = "*"
 pillow = "*"
+django-tinymce = "*"
+django-crispy-forms = "*"
+simpleui = "*"
+djangorestframework = "*"
+django-cors-headers = "*"
+django-filter = "*"
 
 [requires]
 python_version = "3.7"
