--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,6 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-django = "*"
 mistune = "*"
 django-ckeditor = "*"
 pillow = "*"
@@ -17,6 +16,16 @@ django-cors-headers = "*"
 django-filter = "*"
 djangorestframework-jwt = "*"
 dal = "*"
+crispy-forms = "*"
+django-import-export = "*"
+django-reversion = "*"
+django-formtools = "*"
+future = "*"
+httplib2 = "*"
+six = "*"
+xlwt = "*"
+xlsxwriter = "*"
+django = "==2.2.6"
 
 [requires]
 python_version = "3.7"
