--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,35 @@
 asgiref==3.2.3
-Django==3.0
+defusedxml==0.6.0
+diff-match-patch==20181111
+Django==2.2.6
 django-ckeditor==5.8.0
 django-cors-headers==3.2.0
 django-crispy-forms==1.8.1
 django-filter==2.2.0
+django-formtools==2.2
+django-import-export==2.0
 django-js-asset==1.2.2
+django-reversion==3.0.5
 django-tinymce==2.8.0
 djangorestframework==3.11.0
 djangorestframework-jwt==1.11.0
+et-xmlfile==1.0.1
+future==0.18.2
+httplib2==0.15.0
+jdcal==1.4.1
+MarkupPy==1.14
 mistune==0.8.4
+odfpy==1.4.0
+openpyxl==3.0.2
 Pillow==6.2.1
 PyJWT==1.7.1
 pytz==2019.3
+PyYAML==5.2
 simpleui==3.2
+six==1.13.0
 sqlparse==0.3.0
+tablib==0.14.0
+xadmin==2.0.1
+xlrd==1.2.0
+XlsxWriter==1.2.6
+xlwt==1.3.0
